--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ scripts/tsgen/test/output.txt
 plugins/spine/spine-runtimes/
 assets/background psd.psd
 assets/wagon.psd
+assets/forest patrol background music.ceol
