--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ plugins/spine/spine-runtimes/
 assets/background psd.psd
 assets/wagon.psd
 assets/forest patrol background music.ceol
+assets/tree.psd
