fixed menu commit

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,8 @@ assets/background psd.psd
 assets/wagon.psd
 assets/forest patrol background music.ceol
 assets/tree.psd
+assets/icons.psd
+assets/handle.psd
+assets/forest patrol menu music.ceol
+assets/wood sign.psd
+assets/wood sign long.psd
