--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,6 @@ assets/forest patrol menu music.ceol
 assets/wood sign.psd
 assets/wood sign long.psd
 assets/dude.psd
+assets/sounds.aup3
+assets/sounds.aup3-shm
+assets/sounds.aup3-wal
