--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,5 @@ assets/dude.psd
 assets/sounds.aup3
 assets/sounds.aup3-shm
 assets/sounds.aup3-wal
+assets/background music.mid
+assets/game music v2.ceol
