--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,5 @@ assets/sounds.aup3-shm
 assets/sounds.aup3-wal
 assets/background music.mid
 assets/game music v2.ceol
+assets/wagon dash trails.psd
+assets/wagon dash trails.psd
